# ghostpost-backend

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
api/: forms.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/templates/: post.html
ghostpost_backend/: asgi.py  settings.py  urls.py  wsgi.py
